--- a/index.html
+++ b/index.html
@@ -48,14 +48,11 @@ body {
 </head>
 <body>
 
-<h2>Covid App Title</h2>
-  <p><b>Version: 1.1.4</b></p>
-
 <div class="row">
   <div class="column">
     <div class="card">
-      <h3>Card 1</h3>
-    
+      <h3>COVID Suraksha</h3>
+    <p><b>Version: 1.1.4</b></p>
       <p><a href="">Click here to download</a></p>
     </div>
   </div>
