--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="app_logo.jpg" width="100" height="100"></img>
+      <img src="app_logo.png" width="100" height="100"></img>
       <h3>COVID Suraksha</h3>
     <p><b>Version: 1.1.4</b></p>
       <p><a href="">Click here to download</a></p>
