--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
       <img src="app_logo.png" width="100" height="100"></img>
       <h3>COVID Suraksha</h3>
     <p><b>Version: 1.1.4</b></p>
-      <p><a href="">Click here to download</a></p>
+      <p><a href="https://drive.google.com/open?id=14lnh5RuPcwaASP3QiS8E7kB4UIWfOYb4">Click here to download</a></p>
     </div>
   </div>
 
