--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
     <div class="card">
       <img src="app_logo.png" width="100" height="100"></img>
       <h3>COVID Suraksha</h3>
-    <p><b>New version: 1.1.4 is available</b></p>
+    <p style="font-size:12px"><b>New version: 1.1.4 is available</b></p>
       <p><a href="https://drive.google.com/open?id=14lnh5RuPcwaASP3QiS8E7kB4UIWfOYb4">CLICK HERE TO DOWNLOAD</a></p>
     </div>
   </div>
