--- a/terms.html
+++ b/terms.html
@@ -49,8 +49,8 @@ body {font-family: Arial;}
 <body>
 
 <div class="tab">
-   <button class="tablinks" onclick="openCity(event, 'terms_of_use')" id="defaultOpen">Terms of Use</button>
- <button class="tablinks" onclick="openCity(event, 'privacy_policy')">Privacy Policy</button>
+   <button class="tablinks" onclick="openTerm(event, 'terms_of_use')" id="defaultOpen">Terms of Use</button>
+ <button class="tablinks" onclick="openTerm(event, 'privacy_policy')">Privacy Policy</button>
   
 </div>
 
