--- a/terms.html
+++ b/terms.html
@@ -91,12 +91,28 @@ body {font-family: Arial;}
 
 <div id="privacy_policy" class="tabcontent">
   <h2>Privacy Policy</h2>
-<p>Your privacy is important to us. It is 's policy to respect your privacy regarding any information we may collect from you through our app, Covid Suraksha.</p>
-<p>We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
-<p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification.</p>
+<p>Your privacy is important to us. We respect your privacy regarding any information we may collect from you through our app, Covid Suraksha.</p>
+<p>We ask for basic personal information which will be used the need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
+<p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification.</p>
 <p>We don’t share any personally identifying information publicly or with third-parties, except when required to by law.</p>
-<p>Your continued use of our app will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us.</p>
-<p>This policy is effective as of 13 May 2020.</p>
+<p>You are free to refuse our request for your personal information, with the understanding that we will be unable to register you to our app.</p>
+<p>Your continued use of our app will be regarded as acceptance of our practices around privacy and personal information.</p>
+
+   </p> <p><strong>Information Collection and Use</strong></p> <p>
+                  For a better experience, while using our Service, we
+                  may require you to provide us with certain personally
+                  identifiable information, including but not limited to Basic Identitity details. The information that
+                  we request will be retained by us and used as described in this privacy policy.
+                </p> <div><p>
+                    The app does use third party services that may collect
+                    information used to identify you.
+                  </p> <p>
+                    Link to privacy policy of third party service providers used
+                    by the app
+                  </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> 
+  <p>This policy is effective as of 16 May 2020.</p>
+  
+  
 
 </div>
 
