--- a/terms.html
+++ b/terms.html
@@ -70,22 +70,68 @@ body {font-family: Arial;}
     </li>
    <li>This license shall automatically terminate if you violate any of these restrictions and may be terminated by company name at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</li>
 </ol>
-<h3>3. Disclaimer</h3>
-<ol type="a">
-   <li>The materials within App name are provided on an 'as is' basis. company name makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties including, without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights.</li>
-   <li>Further, company name does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its website or otherwise relating to such materials or on any sites linked to App name.</li>
-</ol>
-<h3>4. Limitations</h3>
-<p>In no event shall company name or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption) arising out of the use or inability to use App name, even if company name or a company name authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.</p>
-<h3>5. Accuracy of materials</h3>
-<p>The materials appearing in App name could include technical, typographical, or photographic errors. company name does not warrant that any of the materials on App name are accurate, complete or current. company name may make changes to the materials contained in App name at any time without notice. However company name does not make any commitment to update the materials.</p>
-<h3>6. Links</h3>
-<p>company name has not reviewed all of the sites linked to its app and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by company name of the site. Use of any such linked website is at the user's own risk.</p>
-<h3>7. Modifications</h3>
-<p>company name may revise these terms of service for its app at any time without notice. By using App name you are agreeing to be bound by the then current version of these terms of service.</p>
-<h3>8. Governing Law</h3>
-<p>These terms and conditions are governed by and construed in accordance with the laws of state name and you irrevocably submit to the exclusive jurisdiction of the courts in that State or location.</p>
-
+<p>
+                  COMpany is committed to ensuring that the app is
+                  as useful and efficient as possible. For that reason, we
+                  reserve the right to make changes to the app or to charge for
+                  its services, at any time and for any reason. We will never
+                  charge you for the app or its services without making it very
+                  clear to you exactly what you’re paying for.
+                </p> <p>
+                  The CS app stores and processes personal data that
+                  you have provided to us, in order to provide our
+                  Service. It’s your responsibility to keep your phone and
+                  access to the app secure. We therefore recommend that you do
+                  not jailbreak or root your phone, which is the process of
+                  removing software restrictions and limitations imposed by the
+                  official operating system of your device. It could make your
+                  phone vulnerable to malware/viruses/malicious programs,
+                  compromise your phone’s security features and it could mean
+                  that the CS app won’t work properly or at all.
+                </p> <div><p>
+                    The app does use third party services that declare their own
+                    Terms and Conditions.
+                  </p> <p>
+                    Link to Terms and Conditions of third party service
+                    providers used by the app
+                  </p> <ul><li><a href="https://policies.google.com/terms" target="_blank">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
+                  You should be aware that there are certain things that
+                  COMpany will not take responsibility for. Certain
+                  functions of the app will require the app to have an active
+                  internet connection. The connection can be Wi-Fi, or provided
+                  by your mobile network provider, but COMpany
+                  cannot take responsibility for the app not working at full
+                  functionality if you don’t have access to Wi-Fi, and you don’t
+                  have any of your data allowance left.
+                </p> <p></p> <p>
+                  If you’re using the app outside of an area with Wi-Fi, you
+                  should remember that your terms of the agreement with your
+                  mobile network provider will still apply. As a result, you may
+                  be charged by your mobile provider for the cost of data for
+                  the duration of the connection while accessing the app, or
+                  other third party charges. In using the app, you’re accepting
+                  responsibility for any such charges, including roaming data
+                  charges if you use the app outside of your home territory
+                  (i.e. region or country) without turning off data roaming. If
+                  you are not the bill payer for the device on which you’re
+                  using the app, please be aware that we assume that you have
+                  received permission from the bill payer for using the app.
+                </p> <p>
+                  Along the same lines, COMpany cannot always take
+                  responsibility for the way you use the app i.e. You need to
+                  make sure that your device stays charged – if it runs out of
+                  battery and you can’t turn it on to avail the Service,
+                  COMpany cannot accept responsibility.
+                </p> <p>
+                  With respect to COMpany’s responsibility for your
+                  use of the app, when you’re using the app, it’s important to
+                  bear in mind that although we endeavour to ensure that it is
+                  updated and correct at all times, we do rely on third parties
+                  to provide information to us so that we can make it available
+                  to you. COMpany accepts no liability for any
+                  loss, direct or indirect, you experience as a result of
+                  relying wholly on this functionality of the app.
+                </p> 
 
 </div>
 
