--- a/terms.html
+++ b/terms.html
@@ -56,99 +56,38 @@ body {font-family: Arial;}
 
 <div id="terms_of_use" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <p>By accessing our app, Covid Suraksha, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing Covid Suraksha. The materials contained in Covid Suraksha are protected by applicable copyright and trademark law.</p>
-<h3>2. Use License</h3>
-<ol type="a">
-   <li>Permission is granted to temporarily download one copy of App name per device for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
-   <ol type="i">
-       <li>modify or copy the materials;</li>
-       <li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
-       <li>attempt to decompile or reverse engineer any software contained in App name;</li>
-       <li>remove any copyright or other proprietary notations from the materials; or</li>
-       <li>transfer the materials to another person or "mirror" the materials on any other server.</li>
-   </ol>
-    </li>
-   <li>This license shall automatically terminate if you violate any of these restrictions and may be terminated by company name at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.</li>
-</ol>
+  <p>By accessing our app, Covid Suraksha, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing Covid Suraksha.</p>
 <p>
-                  COMpany is committed to ensuring that the app is
+                  National Informatics Centre, Assam is committed to ensuring that the app is
                   as useful and efficient as possible. For that reason, we
                   reserve the right to make changes to the app or to charge for
-                  its services, at any time and for any reason. We will never
-                  charge you for the app or its services without making it very
-                  clear to you exactly what you’re paying for.
+                  its services, at any time and for any reason.
                 </p> <p>
-                  The CS app stores and processes personal data that
-                  you have provided to us, in order to provide our
-                  Service. It’s your responsibility to keep your phone and
-                  access to the app secure. We therefore recommend that you do
-                  not jailbreak or root your phone, which is the process of
-                  removing software restrictions and limitations imposed by the
-                  official operating system of your device. It could make your
-                  phone vulnerable to malware/viruses/malicious programs,
-                  compromise your phone’s security features and it could mean
-                  that the CS app won’t work properly or at all.
+                  The Covid Suraksha app stores the personal data and location details securely in encrypted form in the server.
+                 However, District Administration may use these information for using the CovidSuraksha services which will make an effort to ensure that the citizen do not cross the geofence area.
+                 Location Services is used in the app to detect the current location of the user at the time of registration and for Geofence features. 
                 </p> <div><p>
                     The app does use third party services that declare their own
                     Terms and Conditions.
                   </p> <p>
                     Link to Terms and Conditions of third party service
                     providers used by the app
-                  </p> <ul><li><a href="https://policies.google.com/terms" target="_blank">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p>
-                  You should be aware that there are certain things that
-                  COMpany will not take responsibility for. Certain
-                  functions of the app will require the app to have an active
-                  internet connection. The connection can be Wi-Fi, or provided
-                  by your mobile network provider, but COMpany
-                  cannot take responsibility for the app not working at full
-                  functionality if you don’t have access to Wi-Fi, and you don’t
-                  have any of your data allowance left.
-                </p> <p></p> <p>
-                  If you’re using the app outside of an area with Wi-Fi, you
-                  should remember that your terms of the agreement with your
-                  mobile network provider will still apply. As a result, you may
-                  be charged by your mobile provider for the cost of data for
-                  the duration of the connection while accessing the app, or
-                  other third party charges. In using the app, you’re accepting
-                  responsibility for any such charges, including roaming data
-                  charges if you use the app outside of your home territory
-                  (i.e. region or country) without turning off data roaming. If
-                  you are not the bill payer for the device on which you’re
-                  using the app, please be aware that we assume that you have
-                  received permission from the bill payer for using the app.
-                </p> <p>
-                  Along the same lines, COMpany cannot always take
-                  responsibility for the way you use the app i.e. You need to
-                  make sure that your device stays charged – if it runs out of
-                  battery and you can’t turn it on to avail the Service,
-                  COMpany cannot accept responsibility.
-                </p> <p>
-                  With respect to COMpany’s responsibility for your
-                  use of the app, when you’re using the app, it’s important to
-                  bear in mind that although we endeavour to ensure that it is
-                  updated and correct at all times, we do rely on third parties
-                  to provide information to us so that we can make it available
-                  to you. COMpany accepts no liability for any
-                  loss, direct or indirect, you experience as a result of
-                  relying wholly on this functionality of the app.
-                </p> 
-
+                  </p> <ul><li><a href="https://policies.google.com/terms" target="_blank">Google Play Services</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p></p>  
+  
 </div>
 
 <div id="privacy_policy" class="tabcontent">
   <h2>Privacy Policy</h2>
 <p>Your privacy is important to us. We respect your privacy regarding any information we may collect from you through our app, Covid Suraksha.</p>
-<p>We ask for basic personal information which will be used the need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used.</p>
-<p>We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification.</p>
+<p>To register for the app, basic identity details and current location at the time of registration is captured.</p>
 <p>We don’t share any personally identifying information publicly or with third-parties, except when required to by law.</p>
 <p>You are free to refuse our request for your personal information, with the understanding that we will be unable to register you to our app.</p>
 <p>Your continued use of our app will be regarded as acceptance of our practices around privacy and personal information.</p>
 
-   </p> <p><strong>Information Collection and Use</strong></p> <p>
-                  For a better experience, while using our Service, we
-                  may require you to provide us with certain personally
-                  identifiable information, including but not limited to Basic Identitity details. The information that
-                  we request will be retained by us and used as described in this privacy policy.
+   </p> <p><strong>Information Collection and Use</strong></p> 
+  <p>
+                  Basic identity details along with current location at the time of registration is collected through the app. The app uses location features for detecting the current location of the user while registering and also for the Geofence feature. All these personal data
+     are stored in the server in encrypted form. However, District Administration may use these information for ensuring that the citizen do not cross the geofence area.
                 </p> <div><p>
                     The app does use third party services that may collect
                     information used to identify you.
