--- a/terms.html
+++ b/terms.html
@@ -56,6 +56,7 @@ body {font-family: Arial;}
 
 <div id="terms_of_use" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
+   <h2>Terms of Use</h2>
   <p>By accessing our app, Covid Suraksha, you are agreeing to be bound by these terms of service, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing Covid Suraksha.</p>
 <p>
                   National Informatics Centre, Assam is committed to ensuring that the app is
@@ -64,7 +65,7 @@ body {font-family: Arial;}
                   its services, at any time and for any reason.
                 </p> <p>
                   The Covid Suraksha app stores the personal data and location details securely in encrypted form in the server.
-                 However, District Administration may use these information for using the CovidSuraksha services which will make an effort to ensure that the citizen do not cross the geofence area.
+                 However, District Administration may use these information for using the CovidSuraksha services which makes an effort to alert the concerned authority when a home quarantine person crosses the geofence area.
                  Location Services is used in the app to detect the current location of the user at the time of registration and for Geofence features. 
                 </p> <div><p>
                     The app does use third party services that declare their own
@@ -87,7 +88,7 @@ body {font-family: Arial;}
    </p> <p><strong>Information Collection and Use</strong></p> 
   <p>
                   Basic identity details along with current location at the time of registration is collected through the app. The app uses location features for detecting the current location of the user while registering and also for the Geofence feature. All these personal data
-     are stored in the server in encrypted form. However, District Administration may use these information for ensuring that the citizen do not cross the geofence area.
+     are stored in the server in encrypted form.   However, District Administration may use these information for using the CovidSuraksha services which makes an effort to alert the concerned authority when a home quarantine person crosses the geofence area.
                 </p> <div><p>
                     The app does use third party services that may collect
                     information used to identify you.
