--- a/license.html
+++ b/license.html
@@ -70,25 +70,26 @@ body {
 </h3>
 <ul>
     <li>
-        <b>Gson</b>
-        <br/>
-        Copyright 2008 Google, Inc.
-    </li>
-    <li>
         <b>OkHttp</b>
         <br/>
-        Copyright 2014 Square, Inc.
-    </li>
-    <li>
-        <b>Picasso</b>
-        <br/>
-        Copyright 2013 Square, Inc.
+        Copyright 2019 Square, Inc.
     </li>
     <li>
         <b>Retrofit</b>
         <br/>
         Copyright 2013 Square, Inc.
     </li>
+    <li>
+        <b>CircleImageView</b>
+        <br/>
+        Copyright 2014 - 2020 Henning Dodenhof
+    </li>
+   <li>
+        <b>ZXing Android Embedded</b>
+        <br/>
+        Copyright (C) 2012-2018 ZXing authors, Journey Mobile
+    </li>
+ 
 </ul>
 <pre>
     Licensed under the Apache License, Version 2.0 (the "License");
@@ -109,21 +110,9 @@ body {
 </h3>
 <ul>
     <li>
-        <b>Material Dialogs</b>
+        <b>Code Scanner</b>
         <br/>
-        Copyright (c) 2015 Aidan Michael Follestad
-    </li>
-    <li>
-        <b>Robolectric</b>
-        <br/>
-        Copyright (c) 2010 Xtreme Labs
-        <br/>
-        Copyright (c) 2010 Pivotal Labs
-    </li>
-    <li>
-        <b>Mockito</b>
-        <br/>
-        Copyright (c) 2007 Mockito contributors
+        Copyright (c) 2017 Yuriy Budiyev [yuriy.budiyev@yandex.ru]
     </li>
 </ul>
 <pre>
