--- a/license.html
+++ b/license.html
@@ -138,7 +138,8 @@ SOFTWARE.
 </div>
 
 <div id="credits" class="tabcontent">
-  <h2>Credits</h2>
+
+   <p>App Icon made by <a href="https://www.flaticon.com/authors/freepik">Freepik</a> from <a href="https://www.flaticon.com">www.flaticon.com</a>"</p>
 
 
 </div>
