--- a/license.html
+++ b/license.html
@@ -139,7 +139,7 @@ SOFTWARE.
 
 <div id="credits" class="tabcontent">
 
-   <p>App Icon made by <a href="https://www.flaticon.com/authors/freepik">Freepik</a> from <a href="https://www.flaticon.com">www.flaticon.com</a></p>
+   <p>App Icon made by <a target="_blank" href="https://www.flaticon.com/authors/freepik">Freepik</a> from <a target="_blank" href="https://www.flaticon.com">www.flaticon.com</a></p>
 
 
 </div>
