--- a/app.html
+++ b/app.html
@@ -1,1 +1,61 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.column {
+  float: left;
+  width: 100%;
+  padding: 0 10px;
+}
+
+
+.row {margin: 0 -5px;}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+</style>
+</head>
+<body>
+
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="app_logo.png" width="100" height="100"></img>
+      <h3>COVID Suraksha</h3>
+    <p style="font-size:12px"><b>New version: 1.0.6 is available</b></p>
+      <p><a href="https://drive.google.com/open?id=1iAsbiKf6LG7cVOESob-OChmayjJKawqb">CLICK HERE TO DOWNLOAD</a></p>
+    </div>
+  </div>
+
+</div>
+
+</body>
+</html>
