--- a/demo.html
+++ b/demo.html
@@ -50,7 +50,7 @@ body {
       <img src="app_logo.png" width="100" height="100"></img>
       <h3>COVID Suraksha</h3>
     <p style="font-size:12px"><b>New demo version: 1.0.7 is available</b></p>
-      <p><a href="https://drive.google.com/open?id=1iAsbiKf6LG7cVOESob-OChmayjJKawqb">CLICK HERE TO DOWNLOAD</a></p>
+      <p><a href="https://drive.google.com/file/d/1HTulGUckv2V7Wz3ayddQH7kYs5sutBby/view?usp=sharing">CLICK HERE TO DOWNLOAD</a></p>
     </div>
   </div>
 
