--- a/app.html
+++ b/app.html
@@ -50,8 +50,8 @@ body {
     <div class="card">
       <img src="app_logo.png" width="100" height="100"></img>
       <h3>COVID Suraksha</h3>
-    <p style="font-size:12px"><b>New version: 1.0.6 is available</b></p>
-      <p><a href="https://drive.google.com/open?id=1iAsbiKf6LG7cVOESob-OChmayjJKawqb">CLICK HERE TO DOWNLOAD</a></p>
+    <p style="font-size:12px"><b>New version: 1.0.7 is available</b></p>
+      <p><a href="https://drive.google.com/file/d/1gl-J1NvlhZNfxHUAX5IDgC1SJ1yu9-0H/view?usp=sharing">CLICK HERE TO DOWNLOAD</a></p>
     </div>
   </div>
 
