--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ body {
       <img src="app_logo.png" width="100" height="100"></img>
       <h3>COVID Suraksha</h3>
     <p style="font-size:12px"><b>New version: 1.2.7 is available</b></p>
-      <p><a href="https://drive.google.com/file/d/1pFBWY7vXdlxRqY0UUiBOa-OgKIo7IFmb/view?usp=sharing">Android app link: Click here to download apk file</a></p>
-     <p><a href="http://164.100.249.135/covid19/covid19_quarantine/index.php/Welcome/login">Web Application link: Click here to access the web portal</a></p>
+      <p><a target="_blank" href="https://drive.google.com/file/d/1pFBWY7vXdlxRqY0UUiBOa-OgKIo7IFmb/view?usp=sharing">Android app link: Click here to download apk file</a></p>
+      <p><a target="_blank" href="http://164.100.249.135/covid19/covid19_quarantine/index.php/Welcome/login">Web Application link: Click here to access the web portal</a></p>
     </div>
   </div>
 
