--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@ body {
     <p style="font-size:12px"><b>Version 1.2.7</b></p>
       <p><a target="_blank" href="https://drive.google.com/file/d/1pFBWY7vXdlxRqY0UUiBOa-OgKIo7IFmb/view?usp=sharing">Android app link: Click here to download apk file</a></p>
       <p><a target="_blank" href="http://164.100.249.135/covid19/covid19_quarantine/index.php/Welcome/login">Web Application link: Click here to access the web portal</a></p>
-    </div>
+      <p><a target="_blank" href="https://hojaidev.github.io/testusers.html">Click here to view the test users credentials</a></p>
+  
+  </div>
   </div>
 
 </div>
