--- a/testusers.html
+++ b/testusers.html
@@ -49,20 +49,7 @@ body {
     <div class="card">
       <h3>Demo Credentials</h3>
     <p style="font-size:12px"><b>Version 1.2.7</b></p>
-      <p> 
-                    Android app test users credentials:
-                1) Citizen user: 
-                  Userid: 9444444444
-                  Password: test1234
-
-                2) Health worker user:
-                  Userid: mjl0103
-                  Password: 54321
-
-               Web application test user credentials:
-                  Userid: majuli
-                  Password: admin
-    </p>
+     <p><strong>&nbsp;Android app test users credentials:</strong><br> 1) Citizen user:<br>Userid: 9444444444<br>Password: test1234<br><br>2) Health worker user:<br>Userid: mjl0103<br>Password: 54321<br><strong><br>Web application test user credentials:</strong><br> Userid: majuli<br> Password: admin</p>
     </div>
   </div>
 
