--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ body {
   <div class="column">
     <div class="card">
       <img src="app_logo.png" width="100" height="100"></img>
-      <h3>COVID Suraksha</h3>
+      <h3>Eletraces Mobile App</h3>
     <p style="font-size:12px"><b>Version 1.2.7</b></p>
-      <p><a target="_blank" href="https://drive.google.com/file/d/1pFBWY7vXdlxRqY0UUiBOa-OgKIo7IFmb/view?usp=sharing">Android app link: Click here to download apk file</a></p>
+      <p><a target="_blank" href="https://drive.google.com/file/d/1FWx8RQoGRogZ2b3_ksolPDiYzEdfW18m/view?usp=sharing">Android app link: Click here to download Eletraces Mobile app</a></p>
       <p><a target="_blank" href="http://164.100.249.135/covid19/covid19_quarantine/index.php/Welcome/login">Web Application link: Click here to access the web portal</a></p>
     </br><p><a target="_blank" href="https://hojaidev.github.io/testusers.html">Click here to view the test users credentials</a></p>
  
