--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
       <h3>Eletraces Mobile App</h3>
     <p style="font-size:12px"><b>Version 1.6</b></p>
       <p><a target="_blank" href="https://drive.google.com/file/d/1FWx8RQoGRogZ2b3_ksolPDiYzEdfW18m/view?usp=sharing">Click here to download Eletraces Mobile app</a></p>
-      <p><a target="_blank" href="http://164.100.249.135/covid19/covid19_quarantine/index.php/Welcome/login">Web Application link: Click here to access the web portal</a></p>
+      <p><a target="_blank" href="Manual_Eletraces_Mobile_App.pdf">Manual of Eletraces Mobile App</a></p>
     </br><p><a target="_blank" href="https://hojaidev.github.io/testusers.html">Click here to view the test users credentials</a></p>
  
   </div>
