--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body {
       <img src="logo.png" width="100" height="100"></img>
       <h3>Eletraces Mobile App</h3>
     <p style="font-size:12px"><b>Version 1.6</b></p>
-      <p><a target="_blank" href="https://drive.google.com/file/d/1FWx8RQoGRogZ2b3_ksolPDiYzEdfW18m/view?usp=sharing">Click here to download Eletraces Mobile app</a></p>
+      <p><a target="_blank" href="https://drive.google.com/file/d/1FWx8RQoGRogZ2b3_ksolPDiYzEdfW18m/view?usp=sharing">Download ELETRACES Mobile app</a></p>
       <p><a target="_blank" href="Manual_Eletraces_Mobile_App.pdf">Manual of Eletraces Mobile App</a></p>
     </br><p><a target="_blank" href="https://hojaidev.github.io/testusers.html">Click here to view the test users credentials</a></p>
  
