--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@ body {
 location of the movement of the vehicle carrying EVM before poll day and on poll
 day. All Zonal Officers, Sector Officers and Presiding Officers involved in the
 Assam Assembly Election 2021 will have to use this app during transportation of
-EVM before poll day and on poll day.</p>
+    EVM before poll day and on poll day.</p></br>
     
-      <p><a target="_blank" href="https://drive.google.com/file/d/1FWx8RQoGRogZ2b3_ksolPDiYzEdfW18m/view?usp=sharing">Download ELETRACES Mobile App</a></p>
+      <p><a target="_blank" href="https://drive.google.com/file/d/1FWx8RQoGRogZ2b3_ksolPDiYzEdfW18m/view?usp=sharing">DOWNLOAD</a></p>
       <p><a target="_blank" href="Manual_Eletraces_Mobile_App.pdf">Manual of Eletraces Mobile App</a></p>
-    </br><p><a target="_blank" href="SOP_Eletraces_Mobile_app.pdf ">SOP of ELETRACES Mobile App</a></p>
+    <p><a target="_blank" href="SOP_Eletraces_Mobile_app.pdf ">SOP of ELETRACES Mobile App</a></p>
  
   </div>
   </div>
