--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body {
 location of the movement of the vehicle carrying EVM before poll day and on poll
 day. All Zonal Officers, Sector Officers and Presiding Officers involved in the
 Assam Assembly Election 2021 will have to use this app during transportation of
-    EVM before poll day and on poll day.</p></br>
+    EVM before poll day and on poll day. For more info, please refer to the manual and SOP given below.</p></br>
     
       <p><a target="_blank" href="https://drive.google.com/file/d/1FWx8RQoGRogZ2b3_ksolPDiYzEdfW18m/view?usp=sharing">DOWNLOAD</a></p>
       <p><a target="_blank" href="Manual_Eletraces_Mobile_App.pdf">Manual of Eletraces Mobile App</a></p>
