--- a/index.html
+++ b/index.html
@@ -48,17 +48,10 @@ body {
   <div class="column">
     <div class="card">
       <img src="logo.png" width="100" height="100"></img>
-      <h3>Eletraces Mobile App</h3>
+      <h3>Covid Suraksha Mobile App</h3>
     <p style="font-size:12px"><b>Version 1.6</b></p></b>
-  <p>ELETRACES is an Android based GPS enabled mobile app to track the GPS
-location of the movement of the vehicle carrying EVM before poll day and on poll
-day. All Zonal Officers, Sector Officers and Presiding Officers involved in the
-Assam Assembly Election 2021 will have to use this app during transportation of
-    EVM before poll day and on poll day. For more info, please refer to the manual and SOP given below.</p></br>
     
-      <p><a target="_blank" href="https://drive.google.com/file/d/1FWx8RQoGRogZ2b3_ksolPDiYzEdfW18m/view?usp=sharing">DOWNLOAD</a></p>
-      <p><a target="_blank" href="Manual_Eletraces_Mobile_App.pdf">Manual of Eletraces Mobile App</a></p>
-    <p><a target="_blank" href="SOP_Eletraces_Mobile_app.pdf ">SOP of ELETRACES Mobile App</a></p>
+      <p><a target="_blank" href="#">DOWNLOAD</a></p>
  
   </div>
   </div>
