--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ body {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="logo.png" width="100" height="100"></img>
+      <img src="app_logo.png" width="100" height="100"></img>
       <h3>Covid Suraksha Mobile App</h3>
     <p style="font-size:12px"><b>Version 1.6</b></p></b>
     
