--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
       <h3>Covid Suraksha Mobile App</h3>
     <p style="font-size:12px"><b>Version 1.6</b></p></b>
     
-      <p><a target="_blank" href="#">DOWNLOAD</a></p>
+      <p><a target="_blank" href="https://drive.google.com/file/d/1NXvEa-Gi2g7gzlf_aeihxExLeeGmpU03/view?usp=sharing">DOWNLOAD</a></p>
  
   </div>
   </div>
