--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@ body {
     <div class="card">
       <img src="app_logo.png" width="100" height="100"></img>
       <h3>Covid Suraksha Mobile App</h3>
-    <p style="font-size:12px"><b>Version 1.6</b></p></b>
+    <p style="font-size:12px"><b>Version 1.2.8</b></p></b>
     
-      <p><a target="_blank" href="https://drive.google.com/file/d/1NXvEa-Gi2g7gzlf_aeihxExLeeGmpU03/view?usp=sharing">DOWNLOAD</a></p>
+      <p><a target="_blank" href="https://drive.google.com/file/d/1NXvEa-Gi2g7gzlf_aeihxExLeeGmpU03/view?usp=sharing">DOWNLOAD APP</a></p>
  
   </div>
   </div>
